--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: script1000のデータ屋
 title: scirpt1000のデータ屋
 description: jsやhtmlなどのデータを保管するサイト
-url: https://script1000.github.com
+url: https://script1000.github.io
 repository: https://github.com/script1000/script1000.github.com
 timezone: Japan
 google_site_verification: t55QGjwh_eXNPM4WHHhJEAD22F6WhazVlOj_f5naJ5E
