--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description: jsやhtmlなどのデータを保管するサイト
 url: https://script1000.github.io
 repository: https://github.com/script1000/script1000.github.com
 timezone: Japan
+google_analytics_id: UA-214899681-2
 google_site_verification: t55QGjwh_eXNPM4WHHhJEAD22F6WhazVlOj_f5naJ5E
 plugins:
 - jekyll-avatar
